# Optimisation-of-the-image-processing-based-on-the-hardver

./: CMakeLists.txt  Zadatak1 - Array ADD.cpp  Zadatak2 - Matrix MULL.cpp  Zadatak3 - Grayscale.cpp  main.cpp
headers/: Image_Processor.h  Image_Processor_Not_Optimised.h  Image_Processor_Optimised.h  _Timer.h
source/: Image_Processor.cpp  Image_Processor_Not_Optimised.cpp  Image_Processor_Optimised.cpp
